--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "vstd-api",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha test --exit",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
-  "author": "",
+  "author": "Travez Ripley",
   "license": "ISC",
   "dependencies": {
+
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "chai": "^4.0.2",
