--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   "author": "Travez Ripley",
   "license": "ISC",
   "dependencies": {
-
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "morgan": "^1.8.1",
+    "body-parser": "^1.18.3",
+    "fs": "0.0.1-security",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "chai": "^4.0.2",
     "chai-http": "^3.0.0",
-    "express": "^4.15.3",
+    "express": "^4.16.4",
     "mocha": "^3.5.0"
   }
 }
